tests/functions/errors/no_main.c
int nomain(int a, int b) { return a + b; }
